# mikham_bot1

./: .env.sample  README.md  google_scrap_tehran_albors.xlsx  goto_mikham_visit_page.html  neshan_scrap_tehran_albors.xlsx  pyproject.toml  run_google.py  run_importer.py  run_neshan.py  run_requester.py  test.py
google/: ..goto_google_map__visit_page.html  run_scraper.py  test_repetitive_listing.py
google/config/: app.py  redis.py  resource.py
google/data/: referers.py  user_agents.py
google/processes/: __init__.py  city_listings_scraper.py
google/utils/: save_to_excel.py
importer/: faild.txt  run_importer.py
importer/config/: __init__.py  app.py  redis.py  resource.py
importer/core/: __init__.py
importer/data/: __init__.py
importer/process/: __init__.py  mikham_import.py
importer/utils/: __init__.py  clean_string.py  save_faild_records.py
neshan/: run_scraper.py
neshan/config/: __init__.py  app.py  redis.py  resource.py
neshan/processes/: city_listings_scraper.py
neshan/utils/: __init__.py  clean_text.py  save_img.py  save_to_excel.py  singleton.py
server/apis/: __init__.py
server/core/: server.py
server/utils/: __init__.py  get_scraped_requests.py
storage/imported_sheets/: املاک__املاک||در||آسارا__البرز__google_map.xlsx  املاک__املاک||در||ورامین__تهران__google_map.xlsx  تبلیغات و بازاریابی__بازاریابی||در||ورامین__تهران__google_map.xlsx  تبلیغات و بازاریابی__چاپ و تکثیر||در||آسارا__البرز__google_map.xlsx  تبلیغات و بازاریابی__چاپ و تکثیر||در||ورامین__تهران__google_map.xlsx  تولیدی و صنعتی__صنایع چوب||در||آسارا__البرز__google_map.xlsx  (+71 more)
(+208 files in other folders)
